--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Todos#index</h1>
+<h1>Welcome, <%= current_user.name %></h1>
 <p>Find me in app/views/todos/index.html.erb</p>
+<%= button_to "Log Out", destroy_user_session_path, method: :delete, class="btn btn-primary" %>
