--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -4,12 +4,12 @@
 
 <div class= "form-group">
 <%= f.label :title %>
-<%= f.text_field :title, required: true, placeholder: "Title of To-Do" %>
+<%= f.text_field :title, required: true, placeholder: "Title of To-Do", class:"form-control" %>
 </div>
 
 <div class= "form-group">
 <%= f.label :details %>
-<%= f.text_field :details, placeholder: "Additional To-Do Info" %>
+<%= f.text_field :details, placeholder: "Additional To-Do Info", class:"form-control" %>
 <small id="emailHelp" class="form-text text-muted">Include any information that will help you get your to-do done here.</small>
 </div>
 
