--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,17 +5,17 @@
     
   <div class="form-group">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, required: true %>
+    <%= f.text_field :first_name, autofocus: true, required: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, required: true %>
+    <%= f.text_field :last_name, required: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, placeholder: "Email" %>
+    <%= f.email_field :email, placeholder: "Email", class: "form-control" %>
   </div>
 
   <div class="form-group">
@@ -23,7 +23,7 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password %>
+    <%= f.password_field :password, class: "form-control" %>
   </div>
 
   <div class="form-group">
